@@ -1,3 +1,7 @@
+Version Unreleased (TBD)
+- Remove duplicate tags from Intel window (first row) and change font color (adjustable in `data/config/tag_data.json`).
+
+
 Version 3.2.1 (2025.04.04)
 - Fix market intel when using Group By Star System method.
 - Update the game dependency to 0.98a-RC7.
